--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "~15.1.6",
     "@angular/compiler-cli": "^15.1.0",
+    "@types/spotify-api": "^0.0.20",
+    "@types/spotify-web-playback-sdk": "^0.1.15",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
     "eslint": "^8.33.0",
